--- a/src/assets/styles/career.css
+++ b/src/assets/styles/career.css
@@ -40,7 +40,7 @@
 
 .career-header h2 {
     font-family: edwardian;
-    font-size: clamp(2rem, 10vw, 20rem);
+    font-size: clamp(2rem, 8vw, 20rem);
     font-weight: 500;
     padding-top: 1%;
     /* align-items: ; */
@@ -48,7 +48,7 @@
 
 .career-header h1 {
     font-family: voga;
-    font-size: clamp(2rem, 9vw, 20rem);
+    font-size: clamp(2rem, 7vw, 20rem);
     font-weight: 500;
 
 }
@@ -57,12 +57,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 8% 10% 5% 10%;
+    margin: 8% 5% 5% 5%;
     justify-content: center;
     flex-wrap: wrap;
-    text-align: center;
+    text-align: justify;
     font-family: "Poppins";
     font-weight: 300;
+    text-align-last: center;
+    font-size: clamp(.5em, 1.1vw, 3em);
 }
 
 .career-about h1 {
@@ -94,14 +96,14 @@
     padding-top: .5%;
     color: var(--burgundy);
     font-family: edwardian;
-    font-size: clamp(1rem, 6vw, 20rem);
+    font-size: clamp(1rem, 4vw, 20rem);
     font-weight: 500;
 }
 
 .career-positions-header h1 {
     color: var(--black);
     font-family: voga;
-    font-size: clamp(1rem, 5vw, 20rem);
+    font-size: clamp(1rem, 4vw, 20rem);
     font-weight: 500;
 }
 
@@ -141,12 +143,12 @@
     justify-content: center;
     gap: 3%;
     text-align: left;
-    margin: 3% 5%;
+    /* margin: 3% 5%; */
 }
 
 .benefit-card {
     flex: 1;
-    margin: 2% 3%;
+    margin: 2% 0%;
     padding-top: 20px;
     font-family: voga;
     font-weight: 500;
@@ -167,7 +169,7 @@
     font-family: voga;
     font-weight: 500;
     line-height: .9;
-    height: clamp(6rem, 10vh, 10rem);
+    /* height: clamp(4rem, 4vh, 10rem); */
 }
 
 .benefit-title.italic {
@@ -201,7 +203,7 @@
 
 .job-item-line {
     border-bottom: 1px solid var(--black);
-    margin: 0 10%;
+    margin: 0 5%;
 }
 
 .job-item-data {
@@ -256,7 +258,7 @@ span {
     }
     .career-positions-header {
         justify-content: left;
-        margin-left: 10%;
+        margin-left: 5%;
     }
     
     .job-item-data {
@@ -349,5 +351,7 @@ span {
         font-size: clamp(3rem, 9vw, 20rem);
     
     }
-   
+    .benefit-card {
+        margin: 2% 5%;
+    }
 }
