--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -12,7 +12,7 @@
     margin: 0% 0% 0% 0%;
     width: 100%;
     min-width: 800px;
-    height: 80px;
+    height: 20%;
     display: block;
     align-items: center;
     background-color: transparent;
@@ -22,7 +22,7 @@
 }
 
 .nav {
-    margin-top: 10px;
+    /* margin-top: 10px; */
 
     max-width: 1000px;
     height: 100%;
